--- a/AtkTennis/Views/Admin/CourtSettings.cshtml
+++ b/AtkTennis/Views/Admin/CourtSettings.cshtml
@@ -11,9 +11,9 @@
 
 
 
-<!-- Content Wrapper. Contains page content -->
+
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
+
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -27,10 +27,9 @@
                     </ol>
                 </div>
             </div>
-        </div><!-- /.container-fluid -->
+        </div>
     </section>
 
-    <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
             <div class="row">
@@ -44,7 +43,7 @@
                                 <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addCourt">Kort Ekle</button>
                             </div>
                         </div>
-                        <!-- /.card-header -->
+                      
                         <div class="card-body">
                             <table id="example2" class="table table-bordered table-hover">
                                 <thead>
@@ -78,16 +77,20 @@
                                 </tbody>                       
                             </table>
                         </div>
-                        <!-- /.card-body -->
+                       
                     </div>
-                    <!-- /.card -->
-
+                  
 
                     <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Kort Ücret Tarifesi</h3>
+                        <div class="card-header d-flex justify-content-between">
+                            <div class="card-title">
+                                <h3>Kort İşlemleri</h3>
+                            </div>
+                            <div>
+                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addCourtOperations">İşlem Ekle</button>
+                            </div>
                         </div>
-                        <!-- /.card-header -->
+                
                         <div class="card-body">
                             <table id="example3" class="table table-bordered table-hover">
                                 <thead>
@@ -98,7 +101,7 @@
                                         <th>Tarife Tipi</th>
                                         <th>Durumu</th>
                                         <th>İşlemler</th>
-                                        
+
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -111,24 +114,23 @@
                                             <td>@item.RecipeType</td>
                                             <td>@item.Condition</td>
                                             <td>
-                                                <button class="btn btn-outline-success">Güncelle</button>
-                                                <button class="btn btn-outline-danger">Sil</button>
+                                                <button class="btn btn-outline-success" id="@item.CourtPriceListId " onclick="OpenUpdateCourtOperation(this.id)">Güncelle</button>
+                                                <button class="btn btn-outline-danger" id="@item.CourtPriceListId" onclick="DeleteCourtOperation(this.id)">Sil</button>
                                             </td>
-                                            
+
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
-                        <!-- /.card-body -->
+                   
                     </div>
-                    <!-- /.card -->
-                    <!-- /.card -->
+              
                     <div class="card">
                         <div class="card-header">
                             <h3 class="card-title">DataTable with default features</h3>
                         </div>
-                        <!-- /.card-header -->
+                     
                         <div class="card-body">
                             <table id="example1" class="table table-bordered table-striped">
                                 <thead>
@@ -203,34 +205,27 @@
                                         <td>A</td>
                                     </tr>
                                 </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <th>Rendering engine</th>
-                                        <th>Browser</th>
-                                        <th>Platform(s)</th>
-                                        <th>Engine version</th>
-                                        <th>CSS grade</th>
-                                    </tr>
-                                </tfoot>
+                         
                             </table>
                         </div>
-                        <!-- /.card-body -->
+           
                     </div>
-                    <!-- /.card -->
+                
                 </div>
-                <!-- /.col -->
+      
             </div>
-            @*/.row*@
+         
         </div>
-        <!-- /.container-fluid -->
+ 
     </section>
-    <!-- /.content -->
+
 </div>
 
 
-<!-- /.content-wrapper -->
-<!-- Modal -->
-<div class="modal fade" id="updateCourtModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+
+
+<div class="modal fade" id="openUpdateCourtOperation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -240,16 +235,52 @@
                 </button>
             </div>
             <div class="modal-body">
-                ...
+
+                <div class="roww roww-space">
+
+                    <div class="coll-2">
+                        <div class="input--group">
+                            <label class="label">Adı</label>
+                            <input type="text" id="Name" class="input--style-4">
+                        </div>
+                    </div>
+                    <div class="coll-2">
+                        <div class="input--group">
+                            <label class="label">Fiyatı</label>
+                            <input type="text" id="Price" class="input--style-4">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="roww roww-space">
+                    <div class="coll-2">
+                        <div class="input--group">
+                            <label class="label">Ücret Tipi</label>
+                            <input type="text" id="PriceType" class="input--style-4">
+                        </div>
+                    </div>
+                    <div class="coll-2">
+                        <div class="input--group">
+                            <label class="label">Tarife Tipi</label>
+                            <input type="text" id="RecipeType" class="input--style-4">
+                        </div>
+                    </div>
+                    <div class="coll-2">
+                        <div class="input--group">
+                            <label class="label">Durumu</label>
+                            <input type="text" id="Conditions" class="input--style-4">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="modal-footer">
+
+            <div class="modal-footer" id="updateCourtOperationsModel">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" onclick="updateCourtOperations(this.id)">Save changes</button>
             </div>
         </div>
     </div>
 </div>
-
 
 
 
@@ -297,6 +328,9 @@
                     </div>
          
             </div>
+
+
+
             <div class="modal-footer" id="updateModel">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" onclick="updateCourtInf(this.id)">Save changes</button>
@@ -376,6 +410,30 @@
         </div>
     </div>
 </div>
+
+
+
+<div class="modal fade" id="deleteOperationCourtModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Kort İşlemini Silmek İstediğinizden Emin Misiniz ?
+            </div>
+            <div class="modal-footer" id="deleteOperationModel">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal</button>
+                <button type="button" class="btn btn-primary" onclick="deleteCourtOperations(this.id)">Sil</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <script>
 
@@ -586,7 +644,6 @@
         });
     }
 
-
     function addCourt() {
         if ($("#court_name").val() == "" || $("#court_type").val() == "" || $("#court_condition").val() == "" || $("#court_webcondition").val() == "") {
             $.confirm({
@@ -644,6 +701,148 @@
             });
         }
 
+    }
+
+    function OpenUpdateCourtOperation(ID) {
+        $.ajax({
+            type: "GET",
+            url: '../Admin/GetCourtOperations',
+            cache: false,
+            data: { "id": ID },
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+                if (res != null) {
+
+                    debugger;
+
+                    $("#Name").val(res.name);
+                    $("#Price").val(res.courtPrice);
+                    $("#PriceType").val(res.priceType);
+                    $("#RecipeType").val(res.recipeType);
+                    $("#Conditions").val(res.condition);
+                    $("#updateCourtOperationsModel button:nth-of-type(2)").attr("id", ID);
+                    $('#openUpdateCourtOperation').modal('toggle');
+                }
+
+                else {
+                    $.confirm({
+                        title: "Uyarı",
+                        content: "Kullanıcı Bulunamadı.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+            },
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+    }
+
+    function updateCourtOperations(id) {
+
+        $.ajax({
+            type: "POST",
+            url: '../Admin/PostCourtOperations',
+            cache: false,
+            data: { "id": id, "name": $("#Name").val(), "courtPrice": $("#Price").val(), "priceType": $("#PriceType").val(), "recipeType": $("#RecipeType").val(), "condition": $("#Conditions").val() },
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+                if (res != null) {
+
+                    $.confirm({
+                        title: "Bilgilendirme",
+                        content: "Kullanıcı başarıyla güncellendi.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+
+                    window.location.href = "CourtSettings"
+
+                }
+
+                else {
+                    $.confirm({
+                        title: "Uyarı",
+                        content: "Kullanıcı Bulunamadı.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+            },
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+    }
+
+    function DeleteCourtOperation(ID) {
+
+        $("#deleteOperationModel button:nth-of-type(2)").attr("id", ID);
+        $("#deleteOperationCourtModal").modal("toggle");
+
+    }
+
+    function deleteCourtOperations(ID) {
+        $.ajax({
+            type: "GET",
+            url: '../Admin/CourtOperationsDelete',
+            cache: false,
+            data: { "id": ID },
+            dataType: "json",
+            async: true,
+            success: function (res) {
+                if (res == "true") {
+
+                    $("#deleteOperationCourtModal").modal("toggle");
+
+                    $.confirm({
+                        title: "Bilgilendirme ",
+                        content: "Kullanıcı Başarılı Şekilde Silindi.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });                
+                }
+
+                else {
+                    
+                    $.confirm({
+                        title: "Uyarı",
+                        content: "Silme Sırasında Hata Oluştu",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+            },
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
     }
 </script>
 
